tests/data/placebo/test_sagemaker_cluster_security_group_filter/api.sagemaker.DescribeCluster_1.json
{
    "status_code": 200,
    "data": {
        "ClusterArn": "arn:aws:sagemaker:us-east-1:644160558196:cluster/swdbshi6ar63",
        "ClusterName": "c7n-test-cluster",
        "ClusterStatus": "Creating",
        "CreationTime": {
            "__class__": "datetime",
            "year": 2024,
            "month": 3,
            "day": 27,
            "hour": 14,
            "minute": 46,
            "second": 5,
            "microsecond": 983000
        },
        "InstanceGroups": [
            {
                "CurrentCount": 0,
                "TargetCount": 1,
                "InstanceGroupName": "test-ig",
                "InstanceType": "ml.t3.medium",
                "LifeCycleConfig": {
                    "SourceS3Uri": "s3://hyperpod-lifecycle-scripts-test",
                    "OnCreate": "on_create.sh"
                },
                "ExecutionRole": "arn:aws:iam::644160558196:role/service-role/AmazonSageMaker-ExecutionRole-20240319T150889",
                "ThreadsPerCore": 1
            }
        ],
        "VpcConfig": {
            "SecurityGroupIds": [
                "sg-03c0b84cdad91744f"
            ],
            "Subnets": [
                "subnet-0bd18cd4df2d0d3b9"
            ]
        },
        "ResponseMetadata": {}
    }
}
