tests/data/placebo/test_sagemaker_cluster_security_group_filter/api.sagemaker.ListClusters_1.json
{
    "status_code": 200,
    "data": {
        "NextToken": "",
        "ClusterSummaries": [
            {
                "ClusterArn": "arn:aws:sagemaker:us-east-1:644160558196:cluster/swdbshi6ar63",
                "ClusterName": "c7n-test-cluster",
                "CreationTime": {
                    "__class__": "datetime",
                    "year": 2024,
                    "month": 3,
                    "day": 27,
                    "hour": 14,
                    "minute": 46,
                    "second": 5,
                    "microsecond": 983000
                },
                "ClusterStatus": "Creating"
            }
        ],
        "ResponseMetadata": {}
    }
}
