tests/data/placebo/test_sagemaker_cluster_security_group_filter/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-03c0b84cdad91744f",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "ASV",
                        "Value": "PolicyTest"
                    },
                    {
                        "Key": "Owner",
                        "Value": "c7n"
                    }
                ],
                "VpcId": "vpc-0d4f819d13b730139"
            }
        ],
        "ResponseMetadata": {}
    }
}
